--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Bobby Nicholson",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "mongoose": "^5.9.15",
+    "nexmo": "^2.6.0",
     "nodemailer": "^6.4.6"
   },
   "devDependencies": {
