--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-DB_PASSWORD = mongodb://whiteboy04:Whiteboy78704@ds229078.mlab.com:29078/clientdb
+DB_PASSWORD=mongodb://whiteboy04:Whiteboy78704@ds229078.mlab.com:29078/clientdb
 
-ADMIN = 2547919253
+ADMIN=2547919253
 
-NEXMO_API = 3e3a8a1e
-NEXMO_PS = PjYXbfjdu5o0JYA4
+NEXMO_API=3e3a8a1e
+NEXMO_PS=PjYXbfjdu5o0JYA4
+
+OUR_API=superSecret
